added FOOTER, in FOOTER block Content done

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,3 +1,10 @@
 // FONTS
 $font_montserrat: 'Montserrat', sans-serif;
 $font_open-sans: 'Open Sans', sans-serif;
+
+// COLORS
+$color_black: #363838;
+$color_dark-grey: #5A5A5A;
+$color_light-grey: #A1A1A1;
+$color_grey: #DFDFDF;
+$color_white: #FFFFF0;
