--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,5 +1,5 @@
 // Montserrat 700
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
-// Open sans 400
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+// Open Sans 400, 600
+@import url('https://fonts.googleapis.com/css2?Open+Sans:wght@400;600&display=swap');
