--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,7 +5,7 @@
 @import 'global';
 
 
-// ------ HEADER ------
+// ------ HEADER ------ //
 .header {
 
     // .header__inner
@@ -52,4 +52,153 @@
 .logo {
     margin-left: auto;
     margin-right: auto;
+}
+
+// ------ FOOTER ------ //
+.footer {
+    background-color: $color_grey;
+
+    // .footer__inner
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    // .footer__content
+    &__content {
+        padding: 60px 0 80px;
+    }
+
+    // .footer__contacts
+    &__contacts {
+        width: 540px;
+
+        // .footer__contacts-title
+        &-title {
+            font-family: $font_montserrat;
+            font-weight: 700;
+            line-height: 23px;
+
+            color: $color_dark-grey;
+
+            margin-bottom: 14px;
+        }
+
+        // .footer__contacts-text
+        &-text {
+            color: $color_dark-grey;
+
+            max-width: 475px;
+
+            margin-bottom: 16px;
+        }
+
+        // .footer__contacts-email
+        &-email {
+            color: $color_black;
+
+            font-weight: 600;
+            font-size: 14px;
+
+            display: inline-block;
+
+            padding-left: 30px;
+            margin-bottom: 22px;
+
+            position: relative;
+
+            &::before {
+                content: '';
+                width: 16px;
+                height: 16px;
+
+                background-image: url(../images/footer/icon_mail.svg);
+                background-repeat: no-repeat;
+                // background-size: cover;
+
+                position: absolute;
+                left: 0px;
+                top: 7px;
+            }
+        }
+    }
+
+    // .footer__form
+    &__form {
+        display: flex;
+
+        // .footer__form-input
+        &-input {
+            padding: 6px 10px 6px 18px;
+
+            width: 100%;
+
+            border: 1px solid rgba($color_black, 0.7);
+            border-radius: 21px;
+
+            background-color: transparent;
+
+            outline: none;
+
+            &::placeholder {
+                color: $color_light-grey;
+
+                font-size: 16px;
+                line-height: 28px;
+            }
+        }
+
+        // .footer__form-btn
+        &-btn {
+            padding: 6px 12px;
+            margin-left: 9px;
+            width: 160px;
+
+            background-color: $color_black;
+            color: $color_white;
+
+            font-weight: 600;
+
+            border: none;
+            border-radius: 21px;
+            
+            outline: none;
+            cursor: pointer;
+        }
+    }
+
+    // .footer__social
+    &__social {
+
+        // .footer__social-item
+        &-item {}
+
+        // .footer__social-link
+        &-link {}
+    }
+
+    // .footer__menu
+    &__menu {
+
+        // .footer__menu-list
+        &-list {}
+
+        // .footer__menu-item
+        &-item {}
+
+        // .footer__menu-link
+        &-link {}
+    }
+
+    // .footer__copyright
+    &__copyright {
+        background-color: $color_black;
+        color: #A1A1A1;
+
+        // .footer__copyright-text
+        &-text {
+            padding: 42px 0px;
+            text-align: center;
+        }
+    }
 }
