--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -4,6 +4,7 @@ $font_open-sans: 'Open Sans', sans-serif;
 
 // COLORS
 $color_black: #363838;
+$color_light-black: #707070;
 $color_dark-grey: #5A5A5A;
 $color_light-grey: #A1A1A1;
 $color_grey: #DFDFDF;
