block Rightmenu done(button in HEADER menu works)

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,3 +1,7 @@
+* {
+	outline: none;
+}
+
 html,
 body {
 	height: 100%;
@@ -10,6 +14,10 @@ body {
 	font-weight: 400;
 
 	color: $color_dark-grey;
+
+	overflow-x: hidden;
+
+	min-width: 320px;
 }
 
 .wrapper {
@@ -21,17 +29,13 @@ body {
 .main {
 	flex: 1 0 auto;
 }
+
 .footer {
 	flex: 0 0 auto;
 }
 
-.container{
-  max-width: 1140px;
-  margin: 0 auto;
-  padding: 0 15px;
+.container {
+	max-width: 1140px;
+	margin: 0 auto;
+	padding: 0 15px;
 }
-
-
-
-
-
