--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -2,4 +2,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 // Open Sans 400, 600
-@import url('https://fonts.googleapis.com/css2?Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
