--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -39,3 +39,37 @@ body {
 	margin: 0 auto;
 	padding: 0 15px;
 }
+
+.slick-dots {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	li {
+		margin: 0 15px;
+
+		&.slick-active {
+			button {
+				background-color: $color_yellow;
+			}
+		}
+	}
+
+	button {
+		background-color: $color_black;
+		cursor: pointer;
+
+		border: none;
+		border-radius: 50%;
+
+		width: 8px;
+		height: 8px;
+		padding: 0;
+
+		font-size: 0;
+
+		&:hover {
+			background-color: $color_yellow;
+		}
+	}
+}
