section NEW-COLLECTION done

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -38,6 +38,12 @@ body {
 	max-width: 1140px;
 	margin: 0 auto;
 	padding: 0 15px;
+
+	&-fluid {
+		max-width: 1920px;
+		margin: 0 auto;
+		padding: 0 15px;
+	}
 }
 
 .slick-dots {
