--- a/scss/style.scss
+++ b/scss/style.scss
@@ -419,6 +419,7 @@
 
             border-bottom: 2px solid rgba($color_black, 0.7);
             position: relative;
+
             &::before {
                 content: '';
                 width: 10px;
@@ -503,6 +504,90 @@
         }
     }
 }
+
+// ------ GALLERY ------ //
+.gallery {
+    padding: 80px 0 90px;
+
+    // .gallery__buttons
+    &__buttons {
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    // .gallery__btn
+    &__btn {
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 28px;
+
+        background-color: transparent;
+        color: #8F8D8D;
+
+        border: 1px solid #454647;
+        border-radius: 20px;
+
+        margin: 0px 13px;
+        padding: 6px 16px;
+
+        cursor: pointer;
+
+        transition: all .5s;
+
+        &:hover,
+        &.mixitup-control-active {
+            background-color: rgba(#FFEF35, 0.5);
+            color: $color_black;
+
+            border: 1px solid rgba(#FFEF35, 0.5);
+        }
+    }
+
+    // .gallery__items
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        gap: 30px 35px;
+    }
+
+    // .gallery__item
+    &__item {
+
+        &:first-child {
+            grid-column: span 2;
+            grid-row: span 2;
+        }
+
+        // .gallery__item-img
+        &-img {
+            object-fit: cover;
+
+            width: 100%;
+            max-height: 1150px;
+            height: 100%;
+        }
+    }
+}
+
+.category {
+
+    // .category-bedroom
+    &-bedroom {}
+
+    // .category-living
+    &-living {}
+
+    // .category-office
+    &-office {}
+
+    // .category-dining
+    &-dining {}
+
+    // .category-chair
+    &-chair {}
+}
+
 
 // ------ FOOTER ------ //
 .footer {
