--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,6 +64,7 @@
 
     max-width: 694px;
     width: 100%;
+    height: 200%;
 
     box-shadow: -2px 3px 17px 0px $color_black;
 
@@ -555,6 +556,11 @@
 
     // .gallery__item
     &__item {
+        transition: all 0.5s;
+
+        &:hover {
+            box-shadow: 2px 2px 5px rgba($color_black, 0.7);
+        }
 
         &:first-child {
             grid-column: span 2;
@@ -706,7 +712,6 @@
     }
 }
 
-
 // ------ FOOTER ------ //
 .footer {
     background-color: $color_grey;
@@ -816,6 +821,12 @@
 
             outline: none;
             cursor: pointer;
+
+            transition: all 0.5s;
+
+            &:hover {
+                box-shadow: 3px 3px 4px rgba($color_black, 0.7);
+            }
         }
     }
 
@@ -833,6 +844,12 @@
         // .footer__social-item
         &-item {
             margin-bottom: 15px;
+
+            transition: all 0.5s;
+
+            &:hover {
+                text-shadow: 2px 2px 5px rgba($color_black, 0.7);
+            }
         }
 
         // .footer__social-icon
@@ -866,6 +883,12 @@
         // .footer__menu-item
         &-item {
             margin-bottom: 15px;
+
+            transition: all 0.5s;
+
+            &:hover {
+                text-shadow: 2px 2px 5px rgba($color_black, 0.7);
+            }
         }
 
         // .footer__menu-link
