added :hover to email in footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -771,6 +771,12 @@
 
             position: relative;
 
+            transition: all 0.5s;
+
+            &:hover {
+                text-shadow: 1px 1px 3px rgba($color_black, 0.7);
+            }
+
             &::before {
                 content: '';
                 width: 16px;
