section PARTNERS on page ABOUT done, page ABOUT done

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1164,3 +1164,15 @@
         }
     }
 }
+
+// ------ PARTNERS ------ //
+.partners {
+    padding-bottom: 72px;
+
+    // .partners__items
+    &__items {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
