page GALLERY done

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -767,6 +767,16 @@
 .gallery {
     padding: 80px 0 90px;
 
+    //.gallery.gallery-page
+    &.gallery-page {
+
+        //.gallery.gallery-page .gallery__item:nth-child(8)
+        & .gallery__item:nth-child(8) {
+            grid-column: span 2;
+            grid-row: span 2;
+        }
+    }
+
     // .gallery__buttons
     &__buttons {
         text-align: center;
@@ -829,7 +839,7 @@
             object-fit: cover;
 
             width: 100%;
-            max-height: 1150px;
+            max-height: 1155px;
             height: 100%;
         }
     }
