--- a/scss/style.scss
+++ b/scss/style.scss
@@ -371,6 +371,8 @@
 
     padding: 14px 0px;
 
+    position: relative;
+
     // .breadcrumbs__list
     &__list {
         display: flex;
@@ -1185,4 +1187,10 @@
         justify-content: space-around;
         align-items: center;
     }
+}
+
+// ------ CONTACT ------ //
+.map {
+    margin-top: -55px;
+    margin-bottom: 50px;
 }
